[project]
name = "test"
description = "Test for requirements"
version = "0.1.0"
authors = [
    { name = "Sam Mangham", email = "mangham@gmail.com" }
]
dependencies = [
    "numpy=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pandas",
]

[tool.poetry]
name = "test"
version = "0.1.0"
description = "Test for requirements"
authors = [
    "Sam Mangham <mangham@gmail.com>"
]

[tool.poetry.dependencies]
numpy = "^1.20.0"
